# linalg_basic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in
include/linalg_basic/: forward_decl.h  index_exception.h  linalg_elements.h  matrix.h  matrix_base.h  matrix_expr.h  utils.h  vector.h
test/: CMakeLists.txt
test/src/: unit-arith_operators.cpp  unit-printable_elements.cpp  unit.cpp
